[package]
name = "orx-bench-shortest-path"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
colored = "2.0"
csv = "1.3"
derive-new = "0.5"
dhat = "0.3"
itertools = "0.11"
rand = "0.8"
rand_chacha = "0.3"
prettytable-rs = "0.10"
progress = "0.2"
serde = "1.0"
serde_json = "1.0"
strum = "0.25"
strum_macros = "0.25"
tempfile = "3.8"
zip-extract = "0.1"

petgraph = "0.6"
orx-priority-queue = "1.3"
priority-queue = "1.3"


[profile.release]
debug = 1

[features]
dhat-heap = []
